# wildfire-hotspot-prediction

./: .gitattributes  .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
assets/fold_1/: lr_predictions.parquet  rf_predictions.parquet  xgb_predictions.parquet
data_raw/: download_data.py
data_raw/AOI_boundary/: AOI.geojson
data_raw/dem/: downloader.py
data_raw/fuel_type/: downloader.py
models/: model_full_lr.pkl  model_full_rf.pkl  model_full_thresholds.json  model_full_xgb.pkl
scripts/: plot_evaluation.py
tests/: .env.example  example_usage.py  example_usage_steps.py
visualize/: fire_growth.html  index.html  package-lock.json  package.json  vite.config.js
visualize/src/: data.js  growth.js  layers.js  main.js  ui.js
visualize/styles/: _panel.scss  _variables.scss  main.css  main.css.map  main.scss
wildfire_hotspot_prediction/: __init__.py  models.py  pipeline.py  study.py
wildfire_hotspot_prediction/build_prediction_data/: __init__.py  era5_check.py  feature_builder.py  predictor.py
wildfire_hotspot_prediction/collect/: __init__.py  clouds.py  environment.py  hotspots.py
wildfire_hotspot_prediction/export/: __init__.py  render.py
wildfire_hotspot_prediction/model/: __init__.py  evaluate.py  train.py
wildfire_hotspot_prediction/predict/: __init__.py  predict.py
wildfire_hotspot_prediction/preprocess/: __init__.py  clouds.py  environment.py  fire_weather_index.py  grid.py  hotspots.py
wildfire_hotspot_prediction/training/: __init__.py  builder.py  features.py  fire_state.py  pair_index.py  sampling.py  (+2 more)
(+5 files in other folders)
